# azure-rvtools-cost-estimator

./: .gitignore  README.md  easy-release-publish  pyproject.toml
.github/workflows/: update-prices.yml
azure_rvtools/: __init__.py  __main__.py  cli.py  excel.py  output.py  pricing.py  rvtools.py  sku_mapper.py
docs/: index.html  manifest.json  security.html
docs/prices/: prices_australiacentral.json  prices_australiacentral_USD.json  prices_australiaeast.json  prices_australiaeast_USD.json  prices_australiasoutheast.json  prices_australiasoutheast_USD.json  prices_brazilsouth.json  prices_brazilsouth_USD.json  prices_canadacentral.json  prices_canadacentral_USD.json  prices_canadaeast.json  prices_canadaeast_USD.json  prices_centralindia.json  prices_centralindia_USD.json  prices_centralus.json  prices_centralus_USD.json  prices_eastasia.json  prices_eastasia_USD.json  prices_eastus.json  prices_eastus2.json  prices_eastus2_USD.json  prices_eastus_USD.json  prices_francecentral.json  prices_francecentral_USD.json  prices_francesouth.json  prices_francesouth_USD.json  prices_germanynorth.json  prices_germanynorth_USD.json  prices_germanywestcentral.json  prices_germanywestcentral_USD.json  prices_japaneast.json  prices_japaneast_USD.json  prices_japanwest.json  prices_japanwest_USD.json  prices_koreacentral.json  prices_koreacentral_USD.json  prices_koreasouth.json  prices_koreasouth_USD.json  prices_northcentralus.json  prices_northcentralus_USD.json  (+44 more)
scripts/: fetch_web_prices.py
